--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:github": "GITHUB_ACTIONS=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build:github && touch out/.nojekyll",
+    "test:local": "npm run build && npx serve out"
   },
   "dependencies": {
     "@react-three/fiber": "^9.3.0",
