--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} run build:github
+        run: npm run build:github
       
       - name: Add .nojekyll file
         run: touch ./out/.nojekyll
