--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "test:local": "npm run build && npx serve out"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "postprocessing": "^6.37.7",
